# web-dashboard/src/types/schema.ts
@@ -125,6 +125,8 @@ export type Lead = Schemas['Lead']
 export type LeadChiTiet = Schemas['LeadChiTiet']
 export type DiemLead = Schemas['DiemLead']
 export type YeuToDiem = Schemas['YeuToDiem']
+export type LyDoLoaiLead = Schemas['LyDoLoaiLead']
+export type LeadDangMo = Schemas['LeadDangMo']
 export type Pheu = Schemas['Pheu']
 export type GiaiDoanPheu = Schemas['GiaiDoanPheu']
 export type Deal = Schemas['Deal']
